Fix css bug on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -356,6 +356,12 @@
           text-decoration: none;
           opacity: 0.9;
         }
+
+        @media screen and (max-width: $on-large) {
+          position: relative;
+          bottom: auto;
+          margin: 10px 0 0 0;
+        }
       }
 
       .color-back {
